dataset1235/2025-2/610742602/users/1126757059/executions/677928262_2819779400.log
== RUN (2025-08-28 20:27:29)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
      y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))
a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 2
    y=flot(input("digite o valor do jogo: "))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:28:51)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:28:40)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:28:52)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:28:16)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))
a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 20:28:18)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))
a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:28:39)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 21:10:26)
-- CODE: 
x=int(input("digite a quantidade de jogos que deseja comprar: "))
y=float(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))
a=x*y+z
print(a)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:28:35)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 21:10:24)
-- CODE: 
x=int(input("digite a quantidade de jogos que deseja comprar: "))
y=float(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))
a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
digite a quantidade de jogos que deseja comprar: digite o valor do jogo: digite o valor do frete: 618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 20:28:37)
-- CODE: 
x=int(input("digite a quantidade e jogos que deseja comprar: "))
y=flot(input("digite o valor do jogo: "))
z=float(input("digite o valor do frete: "))

a=x*y+z
print(a)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=flot(input("digite o valor do jogo: "))
      ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
